--- a/Categorie/Categories.css
+++ b/Categorie/Categories.css
@@ -57,8 +57,6 @@ header {
     }
 
     footer {
-       
-   
     background-image: url("../Images/travel-holic.net_Maldives_17 2.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -133,4 +131,7 @@ section {
     color: white;
     font-size: 30px;
     height: 100vh;
+    display: grid;
+    grid-template-columns: 3fr 4fr 3fr;
+
 }
