--- a/Categorie/Categories.css
+++ b/Categorie/Categories.css
@@ -1,12 +1,9 @@
 body {
     background-image: url(../Images/MacBook\ Pro\ 14_\ -\ 1Fond.png);
-    max-width: 100vw;
-    max-height: 100vh;
     background-size: cover;
-    background-repeat:repeat;
+    background-repeat:no-repeat;
     margin: 0;
-    display: flex;
-    flex-direction: column;
+   
 }
 
 header {
@@ -57,6 +54,7 @@ header {
     }
 
     footer {
+       
     background-image: url("../Images/travel-holic.net_Maldives_17 2.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -130,8 +128,34 @@ section {
     font-style: normal;
     color: white;
     font-size: 30px;
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 3fr 4fr 3fr;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:20px ;
 
+}
+section img {
+    width: 300px ;
+}
+
+section p {
+    width: 100vh;
+}
+p {
+    font-family: "Nanum Brush Script", cursive;
+    font-weight: 400;
+    font-style: normal;
+    color: white;
+    font-size: 30px;
+}
+
+.media-text {
+    display: grid;
+    grid-template-columns: 1fr 9fr;
+    padding-left: 20px;
+    padding-bottom: 20px;
+}
+.media-text p {
+    min-width: 80vw;
+    padding-left: 20px;
 }
