--- a/Acceuil/Acceuil.css
+++ b/Acceuil/Acceuil.css
@@ -1,7 +1,5 @@
 body {
     background-image: url(../Images/MacBook\ Pro\ 14_\ -\ 1Fond.png);
-    max-width: 100vw;
-    max-height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
     margin: 0;
@@ -55,8 +53,6 @@ header {
     }
 
     footer {
-    position:absolute;             
-    bottom:0; width:100%;
     background-image: url("../Images/travel-holic.net_Maldives_17 2.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -129,33 +125,36 @@ section {
     font-weight: 400;
     font-style: normal;
     color: white;
-    font-size: 35px;
+    font-size: 20px;
+    min-height: 100vh;
 }
 
 .ligne1 {
     display: grid;
     grid-template-columns: auto auto auto;
     justify-items: center;
-    margin: 20px;
-    padding: 20px;
-    column-gap: 50px;
+    padding: 60px;
+    gap: 50px;
     text-align: center;
- 
+
 }
 
 h3 {
     margin: 0px;
 }
+
 p {
     margin: 0px;
 }
-.imgacceuil {
-    
-    display: grid;
-    grid-template-columns: 2fr 2fr 2fr;
-    gap: 10 px;
-    align-items: center;
-    justify-items: center;
-    padding-top: 40px;
 
-}
+img {
+    transition: transform .1s;
+    }
+
+section img:hover{
+        transform: scale(1.3);
+        }
+
+footer img:hover{
+            transform: scale(1.3);
+            }
