--- a/A propos/A propos.css
+++ b/A propos/A propos.css
@@ -1,7 +1,5 @@
 body {
     background-image: url(../Images/MacBook\ Pro\ 14_\ -\ 1Fond.png);
-    max-width: 100vw;
-    max-height: 100vh;
     background-size: cover;
     background-repeat:repeat;
     margin: 0;
@@ -57,8 +55,6 @@ header {
     }
 
     footer {
-       
-   
     background-image: url("../Images/travel-holic.net_Maldives_17 2.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -132,10 +128,6 @@ section {
     font-style: normal;
     color: white;
     font-size: 30px;
-    height: 100vh;
-}
-.imgacceuil {
-    padding-top: 20%;
-    display: flex;
-    flex-direction: column;
+    padding-left: 30px;
+    padding-right: 30px;
 }
