--- a/A propos/A propos.css
+++ b/A propos/A propos.css
@@ -1,7 +1,5 @@
 body {
-    background-image: url(../Images/MacBook\ Pro\ 14_\ -\ 1Fond.png);
-    background-size: cover;
-    background-repeat:repeat;
+
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -130,4 +128,8 @@ section {
     font-size: 30px;
     padding-left: 30px;
     padding-right: 30px;
+    background-image: url(../Images/bg.png);
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
