--- a/Categorie/Categories.css
+++ b/Categorie/Categories.css
@@ -1,7 +1,5 @@
 body {
-    background-image: url(../Images/MacBook\ Pro\ 14_\ -\ 1Fond.png);
-    background-size: cover;
-    background-repeat:no-repeat;
+
     margin: 0;
    
 }
@@ -132,6 +130,11 @@ section {
     flex-direction: column;
     align-items: center;
     gap:20px ;
+    padding: 0px 100px;
+    background-image: url(../Images/bg.png);
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
 
 }
 
@@ -139,9 +142,7 @@ section img {
     width: 300px ;
 }
 
-section p {
-    width: 100vh;
-}
+
 p {
     font-family: "Nanum Brush Script", cursive;
     font-weight: 400;
@@ -153,10 +154,4 @@ p {
 .media-text {
     display: grid;
     grid-template-columns: 1fr 9fr;
-    padding-left: 20px;
-    padding-bottom: 20px;
-}
-.media-text p {
-    min-width: 80vw;
-    padding-left: 20px;
 }
