--- a/Contact/contact.css
+++ b/Contact/contact.css
@@ -1,7 +1,5 @@
 body {
-    background-image: url(../Images/MacBook\ Pro\ 14_\ -\ 1Fond.png);
-    background-size: cover;
-    background-repeat:no-repeat;
+
     margin: 0;
    
 }
@@ -132,7 +130,10 @@ section {
     flex-direction: column;
     align-items: center;
     gap:20px ;
-
+    background-image: url(../Images/bg.png);
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 section img {
@@ -150,4 +151,8 @@ p {
     font-size: 30px;
 }
 
+map {
 
+    margin-bottom: 60px;
+
+}
